added new assets and fixed up css

--- a/lion.html
+++ b/lion.html
@@ -5,12 +5,17 @@
 </head>
 <body>
 	<audio src="assets/sounds/roar.wav" class="roar"></audio>
-	<div class="lion"></div>
+	<div class="logo-container">
+		<img class="t-logo" src="assets/images/taronga-logo.png">
+		<img class="rfid-logo" src="assets/images/logo-rfid.svg">
+	</div>
+
+	<div class="lion"><img src="assets/images/lion-head.svg"></div>
 	
-	<canvas id="canvas" width="2000" height="500"></canvas>
+	<canvas id="canvas" width="1460" height="700"></canvas>
 	<br />
-	<input type="range" id="slider" min="10" max="2000" value="1500" style="display:none;"> <span style="display:none;" id="num">500</span>
-	<input type="range" id="gheight" min="10" max="200" value="200" style="display:none;"> <span style="display:none;" id="num2">100</span>
+	<input type="range" id="slider" min="10" max="2000" value="1750" style="display:none;"> <span style="display:none;" id>1800</s-logopan>
+	<input type="range" id="gheight" min="10" max="200" value="200" style="display:none;"> <span style="display:none;" id="num2">200</span>
 	<br /><div id="meter" style="display:none;"></div>
 
 	<script src="assets/js/lion.js"></script>
