--- a/lion.html
+++ b/lion.html
@@ -1,5 +1,4 @@
 <head>
-	
 	<link rel="stylesheet" href="assets/css/lion.css" />
 	<script src="/socket.io/socket.io.js"></script>
 </head>
@@ -14,12 +13,34 @@
 	
 	<canvas id="canvas" width="1460" height="700"></canvas>
 	<br />
-	<input type="range" id="slider" min="10" max="2000" value="1750" style="display:none;"> <span style="display:none;" id>1800</s-logopan>
+	<input type="range" id="slider" min="10" max="2000" value="2000" style="display:none;"> <span style="display:none;" id>1800</s-logopan>
 	<input type="range" id="gheight" min="10" max="200" value="200" style="display:none;"> <span style="display:none;" id="num2">200</span>
 	<br /><div id="meter" style="display:none;"></div>
 
 	<script src="assets/js/lion.js"></script>
 	<script type="text/javascript">
+		// takes a callback that returns a data object
+		// function socketInit(callback) {
+		// 	var socket = io.connect();
+		// 	socket.on('rfid', callback);
+		// }
+
+		// socketInit(function(data) {
+		// 	console.log('data', data);
+		// 	data.forEach(function(id) {
+		// 		if(id.indexOf('39B135040007') > -1) {
+		// 			document.querySelector('.roar').play();
+		// 	        const lionClass = document.querySelector('.lion').classList;
+		// 	        lionClass.toggle('show');
+
+		// 	      	setTimeout(function(){
+		// 		        lionClass.toggle('show');
+		// 	      	},3000);
+		// 			console.log('receiving:', id);
+		// 		}
+		// 	});
+		// });
+
 		/**
 		 *    Waving grass simulation version 1.0
 		 *    Ken Fyrstenberg Nilsen (c) 2013 Abdias Software.
