--- a/lion.html
+++ b/lion.html
@@ -20,26 +20,26 @@
 	<script src="assets/js/lion.js"></script>
 	<script type="text/javascript">
 		// takes a callback that returns a data object
-		// function socketInit(callback) {
-		// 	var socket = io.connect();
-		// 	socket.on('rfid', callback);
-		// }
+		function socketInit(callback) {
+			var socket = io.connect();
+			socket.on('rfid', callback);
+		}
 
-		// socketInit(function(data) {
-		// 	console.log('data', data);
-		// 	data.forEach(function(id) {
-		// 		if(id.indexOf('39B135040007') > -1) {
-		// 			document.querySelector('.roar').play();
-		// 	        const lionClass = document.querySelector('.lion').classList;
-		// 	        lionClass.toggle('show');
+		socketInit(function(data) {
+			console.log('data', data);
+			data.forEach(function(id) {
+				if(id.indexOf('39B135040007') > -1) {
+					document.querySelector('.roar').play();
+			        const lionClass = document.querySelector('.lion').classList;
+			        lionClass.toggle('show');
 
-		// 	      	setTimeout(function(){
-		// 		        lionClass.toggle('show');
-		// 	      	},3000);
-		// 			console.log('receiving:', id);
-		// 		}
-		// 	});
-		// });
+			      	setTimeout(function(){
+				        lionClass.toggle('show');
+			      	},3000);
+					console.log('receiving:', id);
+				}
+			});
+		});
 
 		/**
 		 *    Waving grass simulation version 1.0
