added lion neck

--- a/lion.html
+++ b/lion.html
@@ -9,7 +9,7 @@
 		<img class="rfid-logo" src="assets/images/logo-rfid.svg">
 	</div>
 
-	<div class="lion"><img src="assets/images/lion-head.png"></div>
+	<div class="lion"><img src="assets/images/lion-neck.png"></div>
 	
 	<canvas id="canvas" width="1460" height="700"></canvas>
 	<br />
