--- a/highchart.html
+++ b/highchart.html
@@ -2,7 +2,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
-
+<script src="/socket.io/socket.io.js"></script>
 
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
@@ -10,6 +10,25 @@
 	window.lastValue  = 0;
 	$(function () {
     $(document).ready(function () {
+
+    	// takes a callback that returns a data object
+		function socketInit(callback) {
+			var socket = io.connect();
+			socket.on('rfid', callback);
+		}
+
+		socketInit(function(data) {
+			data.forEach(function(id) {
+				if(id.indexOf('39B135040002') > -1) {
+					console.log('receiving:', id);
+					window.lastValue += 10;
+				}
+				if(id.indexOf('39B135040003') > -1) {
+					console.log('receiving:', id);
+					window.lastValue -= 10;
+				}
+			});
+		});
 
     	window.addEventListener("keydown", function (event) {
 	        if (event.defaultPrevented) {
@@ -50,7 +69,7 @@
                             var x = (new Date()).getTime(), // current time
                                 y = window.lastValue;
                             series.addPoint([x, y], true, true);
-                        }, 1000);
+                        }, 800);
                     }
                 },
                 alignTicks:false
@@ -59,7 +78,9 @@
                 text: 'Opinion'
             },
             xAxis: {
-                type: 'logarithmic'
+                labels: {
+                	enabled: false
+                }
             },
             yAxis: {
                 title: {
