--- a/highchart.html
+++ b/highchart.html
@@ -69,7 +69,7 @@
                             var x = (new Date()).getTime(), // current time
                                 y = window.lastValue;
                             series.addPoint([x, y], true, true);
-                        }, 800);
+                        }, 900);
                     }
                 },
                 alignTicks:false
@@ -119,9 +119,36 @@
                         time = (new Date()).getTime(),
                         i;
 
+					// var myData = [
+     //                	10,
+     //                	20,
+     //                	30,
+     //                	20,
+     //                	0,
+     //                	-10,
+     //                	-15,
+     //                	-30,
+     //                	-20,
+     //                	-5,
+     //                	0,
+     //                	5,
+     //                	10,
+     //                	15,
+     //                	25,
+     //                	30,
+     //                	45
+     //                ];
+
+     //                myData.forEach(function(d, i) {
+     //                	data.push({
+     //                		x: time + i * 1000,
+     //                		y: d
+     //                	});
+     //                });
+
                     for (i = -19; i <= 0; i += 1) {
                         data.push({
-                            x: time + i * 100,
+                            x: time + i * 1000,
                             y: Math.random()
                         });
                     }
